--- a/notebooks/01_data_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "02711973",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74887e20",
+   "metadata": {},
+   "source": [
+    "## 1. Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "9566079d",
@@ -18,6 +34,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "067db33c",
+   "metadata": {},
+   "source": [
+    "## 2. Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6981ad22",
+   "metadata": {},
+   "source": [
+    "### 2.1 Downloading dataset using ucimlrepo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "f94f68f2",
@@ -30,6 +62,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0c5625c0",
+   "metadata": {},
+   "source": [
+    "### 2.2 Load data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "e3fd214c",
@@ -37,6 +77,14 @@
    "outputs": [],
    "source": [
     "df = pd.read_csv('../data/heart_disease.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7c1b3aa",
+   "metadata": {},
+   "source": [
+    "## 3. Exploratory data analysis"
    ]
   },
   {
@@ -197,6 +245,14 @@
    "outputs": [],
    "source": [
     "df_encoded.to_csv('../data/heart_disease_cleaned.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42797b4e",
+   "metadata": {},
+   "source": [
+    "## 4. Visualization"
    ]
   },
   {
