--- a/notebooks/02_pca_analysis.ipynb
+++ b/notebooks/02_pca_analysis.ipynb
@@ -109,17 +109,16 @@
    "id": "75c58e9c",
    "metadata": {},
    "source": [
-    "## 5. Select optimal number of components (e.g., 95% variance)"
+    "## 5. Select optimal number of components"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "11700e9c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select optimal number of components (e.g., 95% variance)\n",
     "optimal_components = np.argmax(np.cumsum(pca.explained_variance_ratio_) >= 0.95) + 1\n",
     "pca = PCA(n_components=optimal_components)\n",
     "X_pca = pca.fit_transform(X)"
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "899660c9",
    "metadata": {},
    "outputs": [],
